--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <table>
+        <tr>
+            <td>개</td>
+            <td>고양이</td>
+        </tr>
+        <tr>
+            <td>멍멍</td>
+            <td>야옹</td>
+        </tr>
+    </table>
 </body>
 </html>
