re: change index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Hello World!</h1>
     <table>
         <tr>
-            <td>개</td>
-            <td>고양이</td>
+            <td>개1</td>
+            <td>고양이1</td>
         </tr>
         <tr>
             <td>멍멍</td>
